[tool.poetry]
name = "booktracer"
version = "0.1.0"
description = "Library management system made with python"
authors = ["Daniel Lima"]
license = "apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.8.0"
pylint = "^3.2.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
